--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ plugins:
 markdown_extensions:
   - attr_list
   - admonition
+  - md_in_html
 
 nav:
   - Inicio: index.md
@@ -23,10 +24,13 @@ nav:
     - Términos usados: definiciones/palabrasmorphman.md
   - Puesta a punto: 
     - Instalación: preparar/instalar.md
-    - Configuración: preparar/configurar.md
-    - Consejo: preparar/consejos.md
+    - Añadiendo decks prefabricados: preparar/newdecks.md
+    - Configuración:
+      - Morphman: preparar/configurar_morhpman.md
+      - Lecturas: preparar/configurar_lecturas.md
+      - Definiciones: preparar/configurar_definiciones.md
+    - Selección de cartas: preparar/consejos.md
   - Uso: 
-    - Decks prefabricados: uso/prehechos.md
     - Crear decks de anime: uso/crear.md
     - Rutina de morphman: uso/rutina.md
 extra_css:
